fix header margin on tablet

--- a/src/assets/scss/app.scss
+++ b/src/assets/scss/app.scss
@@ -97,7 +97,7 @@ a span.icon {
 header.columns {
   margin-bottom: 0 !important;
 
-  @media screen and (max-width: 768px) {
+  @media screen and (max-width: 1280px) {
     margin-right: 0;
     margin-left: 0;
   }
@@ -105,7 +105,7 @@ header.columns {
   .column {
     padding-bottom: 0;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1280px) {
       padding-left: 0;
       padding-right: 0;
     }
